--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <h1>Country search engine</h1>
+    <input id="country-name" type="text" placeholder="type..." />
+    <button id="search">Search a country</button>
+    <h2>List of countries:</h2>
+    <ul id="countries">
+      <li>No data</li>
+    </ul>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
 </body>
