Add form instead of complicated JS

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Country search engine</h1>
-    <input id="country-name" type="text" placeholder="type..." />
-    <button id="search">Search a country</button>
+    <form id="form-search">
+        <input type="text" id="country-name" placeholder="type..." />
+        <button type="submit" id="search">Search a country</button>
+    </form>
     <h2>List of countries:</h2>
     <ul id="countries">
       <li>No data</li>
